*Added support for more subtitle formats (sbv, smi, vtt).
*Added user-friendly descriptions to Jobs table columns.
*Added platform-appropriate default locations for log files and database.
*Added directory memory to file and directory pickers across sessions.
*Fixed "Add to mylist" failing when file is already in mylist.
*Fixed Help button not working on macOS and Linux.
*Fixed drag-and-drop operations with visual feedback.
*Fixed embedded database not working.
*Fixed credential loading from saved options.
*Fixed login dialog layout.
*Fixed !mystats, !anime, !group and !mylist commands in Chii emulator.
*Fixed several minor bugs and improved compatibility with modern Java versions.
*Fixed application to continue running even if optional features fail to initialize.
*Migrated to Gradle build system with Java 21 LTS.
*Updated database drivers (PostgreSQL 42.7.8, MySQL 9.5.0, H2 2.4.240).

1.19 20.11.2006:
*Fixed 'year' parsing exception.
*Added 'ASSUME [SPECIAL] {int}' rule. For padding epno when total is unknown (always true for specials).
*Fixed () issue in tests, for example "IF E(^(Complete Movie|Part \d of \d|OVA)$) DO ADD '%epn '"
*Added english episode name to 'E' test.
*Fixed 'storage field loaded as source field on startup.' (Mylist Options)
*Fixed 'I' test (defined) for 'ver', meaning true if greater than 1.
*Changed 'I' test "syntax"; I(%eng) -> I(eng).
*Fixed and changed truncation; TRUNCATE<{int len},{str end}>. (TRUNCATE<64,...>)
*Fixed db update for postgresql users. To fix 'borked' dbs:
**ALTER TABLE ftb ADD COLUMN len INTEGER NOT NULL DEFAULT 0;
*Added column 'len' to 'Jobs'. (Length in sec)
*Added regexp test to E(pisode) test.
*Added 'TRUNCATE {int max len}' to rules. Will truncate file name if necessary.
*Fixed (removed) the extra k printed in ed2k hash @ info window.
*Fixed stored order of columns in 'Jobs'.
*Added two columns in 'Job' list; mds, mda (missing data flags).
*Added job-list-column-customization to options file.